@@ -1,3 +1,7 @@
+Tue Nov 20 12:26:58 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: one more untranslated string marked
+
 Tue Nov 20 03:34:28 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: set up our icon on all windows
